--- a/docroot/themes/custom/alshaya_white_label/sass/components/user/_user-helper.scss
+++ b/docroot/themes/custom/alshaya_white_label/sass/components/user/_user-helper.scss
@@ -5,14 +5,14 @@
     padding-bottom: 0.75rem;
 
     @include breakpoint($tablet) {
-      margin-bottom: 1.7rem;
+      margin-bottom: 1.6rem;
       margin-top: 0.437rem;
     }
 
     @include breakpoint($desktop) {
       margin-top: 0;
-      margin-bottom: 1.9rem;
-      padding-bottom: 0.875rem;
+      margin-bottom: 0;
+      padding-bottom: 1rem;
     }
   }
 
